# discount

./: LICENSE  discount.cabal
Text/: Discount.hs  Discount.hsc
Text/Discount/: Internal.hs  Internal.hsc
