name:                discount
version:             0.1.0.0
synopsis:            Haskell bindings to the discount Markdown library.
description:         Discount is a thin wrapper around the discount library <http://www.pell.portland.or.us/~orc/Code/discount/> for parsing Markdown.
homepage:            http://github.com/veinor/discount
license:             MIT
license-file:        LICENSE
author:              Patrick Hurst
maintainer:          phurst@amateurtopologist.com
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options: -lmarkdown
  exposed-modules:     Text.Discount
  build-depends:       base >= 4.3
                     , text
                     , bytestring >= 0.8